# agent-memory-core

./: .gitignore  LICENSE  README.md  claude_memory_cli.py  pyproject.toml
src/agent_memory_core/: __init__.py  classifier.py  graph_store.py  maintenance.py  markdown_store.py  memory.py  vector_store.py
src/agent_memory_core/integrations/: __init__.py  crewai.py  langchain.py
tests/: conftest.py  test_classifier.py  test_graph_store.py  test_integrations.py  test_maintenance.py  test_markdown_store.py  test_memory_manager.py  test_vector_store.py
